feat: component cadastro v2

--- a/catalogo-produtos/src/app/app.component.html
+++ b/catalogo-produtos/src/app/app.component.html
@@ -1,11 +1,2 @@
-<form [formGroup]="formulario"></form>
-<input id="nomeitem" type="text" formControlName="nomeitem" >
-<input id="unidade" type="text" formControlName="unidade" >
-<input id="quantidade" type="number" formControlName="quantidade" >
-<input id="preço" type="number" formControlName="preço" >
-<input id="produtoperecivel" type="text" formControlName="produtoperecivel" >
-<input id="datavalidade" type="date" formControlName="datavalidade" >
-<input id="datafabricação" type="date" formControlName="datafabricação" >
+<app-header></app-header>
 <router-outlet></router-outlet>
-
-
